ops/k8s/toboo.nats.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-messaging-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-messaging
  template:
    metadata:
      labels:
        app: nats-messaging
    spec:
      containers:
        - name: nats-messaging
          image: nats-streaming:0.25-alpine
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "toboo-nats",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-messaging-service
spec:
  selector:
    app: nats-messaging
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
