ops/k8s/toboo.ingress.nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    certmanager.k8s.io/cluster-issuer: letsencrypt-cai
  namespace: default
spec:
  rules:
    - host: api.to.boo
      http: &api
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: toboo-api-auth-service
                port:
                  number: 5000
  tls:
    - hosts:
        - api.to.boo
      secretName: toboo-app
